Add error handling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container d-flex align-items-center mt-5 flex-column">
       <form id="city-form">
-        <div class="form-group">
+        <div class="city-form__input-container form-group">
           <h1 class="city-text mb-3">Enter A City</h1>
           <input
             type="text"
@@ -38,6 +38,7 @@
             id="city"
             name="city"
           />
+          <!-- <p class="text-start text-danger">Input cannot be empty!</p> -->
         </div>
 
         <div class="d-flex flex-row justify-content-between mt-3">
